force-app/main/default/objects/Loan_Status_Change__e/Loan_Status_Change__e.object-meta.xml
<CustomObject>
    <description>Domain event fired on every Loan__c status transition. Carries structured fields (Previous_Status__c, New_Status__c, Broker_Id__c) for direct consumption by Dynatrace Davis AI state machine flow-rate monitoring and SLA bottleneck detection. Published by LoanService.</description>
    <label>Loan Status Change</label>
    <pluralLabel>Loan Status Changes</pluralLabel>
</CustomObject>