force-app/main/default/objects/Loan_Status_Change__e/fields/Broker_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Id__c</fullName>
    <description>18-char Salesforce record Id of the Contact (broker) linked to the loan. Always populated via String.valueOf(Id). Enables Dynatrace broker-level performance segmentation. Null when the loan has no broker.</description>
    <label>Broker Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>