force-app/main/default/objects/Loan_Status_Change__e/fields/Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Id__c</fullName>
    <description>Salesforce record Id of the Loan__c that transitioned.</description>
    <label>Loan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>