force-app/main/default/objects/Loan_Status_Change__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>Loan status after this transition.</description>
    <label>New Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>