force-app/main/default/objects/Loan_Status_Change__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Loan status before this transition. Null on initial insert (first Submitted event).</description>
    <label>Previous Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>