force-app/main/default/objects/Loan_Status_Change__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>System.now() at the moment the event was published. Used by Dynatrace as the authoritative transition time for dwell-time and throughput metrics.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>